--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <header>
         <h1>Shiven Patel</h1>
         <p>Welcome to my portfolio website!</p>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section id="about">
@@ -46,5 +54,9 @@
             <p>Phone: (561) 427-8937</p>
         </section>
     </main>
+    <footer>
+        <p>&copy; 2024 Shiven Patel. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
