--- a/index.html
+++ b/index.html
@@ -8,52 +8,36 @@
 </head>
 <body>
     <header>
-        <h1>Shiven Patel</h1>
-        <p>Welcome to my portfolio website!</p>
         <nav>
             <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#experience">Experience</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#resume">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>I am a senior Computer Science major with a strong passion for software development. My experience includes working as a web development intern where I honed my skills in creating user-friendly websites and developed a robust Java program to automate email sending. Additionally, I contributed to the development of an Electronic Health Record (EHR) system for a surgical clinic, enhancing its functionality and improving the overall user experience. I am eager to leverage my skills and experiences to secure a position in the software development field, where I can contribute to innovative projects and continue to grow professionally.</p>
-        </section>
-        <section id="experience">
-            <h2>Professional Experience</h2>
-            <ul>
-                <li>
-                    <h3>Web Development Intern</h3>
-                    <p>Summer 2024</p>
-                    <p>During my internship, I created several websites and developed a Java program for sending emails. This program read a file with 100 people's emails and document paths, automating the process of sending specific emails. This project enhanced my proficiency in Java and improved my understanding of web development best practices.</p>
-                </li>
-                <li>
-                    <h3>EHR System Development</h3>
-                    <p>Summer 2024</p>
-                    <p>I worked on an EHR system for a surgical clinic, where I focused on improving its functionality and user experience. My contributions included implementing new features, optimizing existing ones, and ensuring the system met the clinic's requirements for efficiency and usability.</p>
-                </li>
-            </ul>
-        </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <ul>
-                <li>
-                    <h3>Verbo Vista</h3>
-                    <p>Developed a comprehensive vocabulary learning application that helps users expand their vocabulary through interactive quizzes and personalized learning paths. The project involved using various web technologies to create a user-friendly and engaging interface.</p>
-                </li>
-            </ul>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Email: shiven9019@gmail.com</p>
-            <p>Phone: (561) 427-8937</p>
-        </section>
-    </main>
+    <section id="about">
+        <h1>Shiven Patel</h1>
+        <p>Welcome to my portfolio website!</p>
+        <p>I am a senior Computer Science major with a passion for software development. I have experience in web development and working on EHR systems. My goal is to secure a job in the software field and contribute to innovative projects.</p>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Verbo Vista</h3>
+            <p>Developed a comprehensive vocabulary learning application that helps users expand their vocabulary through interactive quizzes and personalized learning paths.</p>
+        </div>
+    </section>
+    <section id="resume">
+        <h2>Resume</h2>
+        <p><a href="resume.pdf" target="_blank">Download my resume</a></p>
+    </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:shiven9019@gmail.com">shiven9019@gmail.com</a></p>
+        <p>Phone: <a href="tel:+15614278937">(561) 427-8937</a></p>
+    </section>
     <footer>
         <p>&copy; 2024 Shiven Patel. All rights reserved.</p>
     </footer>
