--- a/index.html
+++ b/index.html
@@ -10,37 +10,19 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#resume">Resume</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="experience.html">Professional Experience</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <section id="about">
+    <section id="landing">
         <h1>Shiven Patel</h1>
-        <p>Welcome to my portfolio website!</p>
-        <p>I am a senior Computer Science major with a passion for software development. I have experience in web development and working on EHR systems. My goal is to secure a job in the software field and contribute to innovative projects.</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Verbo Vista</h3>
-            <p>Developed a comprehensive vocabulary learning application that helps users expand their vocabulary through interactive quizzes and personalized learning paths.</p>
-        </div>
-    </section>
-    <section id="resume">
-        <h2>Resume</h2>
-        <p><a href="resume.pdf" target="_blank">Download my resume</a></p>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:shiven9019@gmail.com">shiven9019@gmail.com</a></p>
-        <p>Phone: <a href="tel:+15614278937">(561) 427-8937</a></p>
+        <p>Welcome to my portfolio!</p>
     </section>
     <footer>
         <p>&copy; 2024 Shiven Patel. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
