--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | Shiven Patel Portfolio</title>
+    <title>About Me | Shiven Patel Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,6 +11,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="experience.html">Professional Experience</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -18,8 +19,42 @@
         </nav>
     </header>
     <section id="about">
-        <h1>About Me</h1>
-        <p>I am a senior Computer Science major with a passion for software development. I have experience in web development and working on EHR systems. My goal is to secure a job in the software field and contribute to innovative projects.</p>
+        <div class="container">
+            <h1>About Me</h1>
+            <div class="profile">
+                <img src="profile.jpg" alt="Shiven Patel" class="profile-img">
+                <div class="profile-text">
+                    <h2>Hello! I'm Shiven Patel</h2>
+                    <p>I am a senior Computer Science major with a passion for software development. Over the years, I've honed my skills in web development, contributing to various projects that combine creativity with technical expertise.</p>
+                </div>
+            </div>
+            <div class="background">
+                <h3>My Background</h3>
+                <p>Currently, I am pursuing a degree in Computer Science, where I have been actively involved in developing projects that challenge and expand my skill set. My journey in tech began with a keen interest in coding, which led me to work on diverse projects, from building interactive websites to developing efficient software solutions.</p>
+                <h3>Education & Experience</h3>
+                <ul>
+                    <li><strong>Bachelor of Science in Computer Science</strong> - [University Name], Expected 2024</li>
+                    <li><strong>Web Development Intern</strong> - Created websites and developed a Java program for sending emails.</li>
+                    <li><strong>Project: EHR System</strong> - Improved functionality and user experience of an EHR system for a surgical clinic.</li>
+                </ul>
+                <h3>Skills & Expertise</h3>
+                <ul>
+                    <li>Programming Languages: Java, Python, HTML/CSS, JavaScript</li>
+                    <li>Web Technologies: React, Node.js, Git</li>
+                    <li>Soft Skills: Problem-solving, Teamwork, Communication</li>
+                </ul>
+            </div>
+            <div class="personal-touch">
+                <h3>Passions & Goals</h3>
+                <p>Beyond coding, I enjoy exploring new technologies, participating in hackathons, and contributing to open-source projects. My goal is to leverage my skills to create innovative solutions and make a positive impact in the tech industry.</p>
+            </div>
+            <div class="testimonials">
+                <h3>Testimonials</h3>
+                <blockquote>
+                    <p>"Shiven is a dedicated and talented developer who consistently delivers high-quality work. His enthusiasm for technology is contagious!" - [Colleague's Name]</p>
+                </blockquote>
+            </div>
+        </div>
     </section>
     <footer>
         <p>&copy; 2024 Shiven Patel. All rights reserved.</p>
