--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <img src="IMG_4210.JPG" alt="Shiven Patel" class="profile-img">
             <div class="profile-text">
                 <h1>About Me</h1>
-                <p>I am a senior CS major with a passion for software development. I have experience as a web development intern, where I created websites and developed a Java program for sending emails. I also worked on an EHR system for a surgical clinic. My goal is to secure a job in the software field.</p>
+                <p>I am a senior CS major with a passion for software development. I have experience as a web development intern, where I created websites and developed a Java programs. I also worked on an EHR system for a surgical clinic. My goal is to secure a job in the software field.</p>
             </div>
         </div>
         <div class="container">
