--- a/about.html
+++ b/about.html
@@ -29,7 +29,16 @@
         <div class="container">
             <div class="background">
                 <h2>Background</h2>
-                <p>Here you can elaborate on your background, education, and skills.</p>
+                <p>I am currently a senior majoring in Computer Science, passionate about software development and eager to solve complex problems through technology. My academic journey has provided me with a solid foundation in computer science principles, algorithms, and data structures, which I have applied to various projects and internships.
+    </p>
+    <p>
+        During my undergraduate studies, I engaged in several hands-on projects that allowed me to enhance my coding skills and develop a keen understanding of various programming languages and technologies. I completed my internship as a Web Development Intern, where I had the opportunity to create dynamic websites and applications. This experience honed my skills in front-end and back-end development, particularly in HTML, CSS, JavaScript, and Java.
+    </p>
+    <p>
+        Additionally, I contributed to the development of an Electronic Health Record (EHR) system for a surgical clinic, which involved improving system functionality and user experience. This project deepened my understanding of how technology can be leveraged to streamline complex processes and enhance operational efficiency.
+    </p>
+    <p>
+        My background also includes a solid understanding of version control systems, particularly Git, and a strong commitment to writing clean, maintainable code. I am continuously learning and staying updated with industry trends to ensure that my skills remain relevant and sharp.</p>
             </div>
             <div class="personal-touch">
                 <h2>Personal Touch</h2>
