--- a/about.html
+++ b/about.html
@@ -42,7 +42,16 @@
             </div>
             <div class="personal-touch">
                 <h2>Personal Touch</h2>
-                <p>Share something personal about your journey or interests.</p>
+                <p> Outside of my professional pursuits, I have a deep passion for exploring new technologies and creative problem-solving. My journey into the world of programming began with a fascination for video games and a desire to understand how they work behind the scenes. This curiosity led me to experiment with coding at a young age, and it quickly blossomed into a full-fledged interest in software development.
+    </p>
+    <p>
+        In addition to my technical pursuits, I enjoy hiking and spending time in nature. The problem-solving skills I’ve developed through programming have translated well into outdoor adventures, where planning, strategy, and adaptability are key. I find that exploring the great outdoors provides a refreshing balance to my screen time and fuels my creativity.
+    </p>
+    <p>
+        I’m also an avid reader of science fiction and technology books. They inspire me to think about the future of technology and how emerging innovations can shape our world. This love for reading keeps me engaged with new ideas and motivates me to continually push the boundaries of what I can achieve.
+    </p>
+    <p>
+        Overall, my journey has been shaped by a blend of professional ambition and personal passions. These interests not only drive my career but also enrich my life, providing me with a well-rounded perspective that I bring to all my projects.</p>
             </div>
             <div class="testimonials">
                 <h2>Testimonials</h2>
