--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
             </ul>
         </nav>
     </header>
-    <section id="landing">
-        <h1>Shiven Patel</h1>
-        <p>Welcome to my portfolio!</p>
-    </section>
-    <footer>
-        <p>&copy; 2024 Shiven Patel. All rights reserved.</p>
-    </footer>
+    <main id="landing">
+        <div class="landing-content">
+            <h1>Shiven Patel</h1>
+            <p>Welcome to my portfolio!</p>
+            <p class="tagline">Passionate about software development and innovation</p>
+            <a href="about.html" class="cta-button">Learn More About Me</a>
+        </div>
+    </main>
 </body>
 </html>
