--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Experience | Shiven Patel Portfolio</title>
+    <title>Professional Experience - Shiven Patel</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,21 +13,31 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
+                <li><a href="experience.html">Experience</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <section id="experience">
-        <h1>Professional Experience</h1>
-        <div class="experience">
-            <h3>Web Development Intern</h3>
-            <p>Created websites and developed a Java program for sending emails.</p>
-        </div>
-        <div class="experience">
-            <h3>EHR System</h3>
-            <p>Worked on an EHR system for a surgical clinic, improving its functionality and user experience.</p>
-        </div>
-    </section>
+    <main>
+        <section id="experience">
+            <h2>Professional Experience</h2>
+            <div class="experience">
+                <img src="path_to_logo/MainlineSurgicalCenterLogo.png" alt="Mainline Surgical Center Logo" class="company-logo">
+                <h3>Web Development Intern</h3>
+                <p><strong>Company:</strong> Mainline Surgical Center</p>
+                <p><strong>Duration:</strong> Summer 2024</p>
+                <ul>
+                    <li>Developed and maintained user-friendly websites using HTML, CSS, JavaScript, and various web development frameworks.</li>
+                    <li>Created a Java program to automate the process of sending emails with attachments to over 100 recipients, improving communication efficiency.</li>
+                    <li>Collaborated with a team to enhance the functionality and user experience of an Electronic Health Record (EHR) system.</li>
+                    <li>Implemented responsive design techniques to ensure compatibility across different devices and browsers.</li>
+                    <li>Conducted thorough testing and debugging of web applications, ensuring high-quality deliverables.</li>
+                    <li>Worked closely with stakeholders to gather requirements and provide technical support and training.</li>
+                    <li>Contributed to the overall improvement of the company's digital presence and online patient services.</li>
+                </ul>
+            </div>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2024 Shiven Patel. All rights reserved.</p>
     </footer>
