--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
     <header>
         <nav>
             <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="experience.html">Professional Experience</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#landing">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#experience">Professional Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <main id="landing">
-        <div class="landing-content">
-            <h1>Shiven Patel</h1>
-            <p>Welcome to my portfolio!</p>
-            <p class="tagline">Passionate about software development and innovation</p>
-            <a href="about.html" class="cta-button">Learn More About Me</a>
-        </div>
-    </main>
+    
+    <section id="landing">
+        <img src="background.jpg" alt="Welcome Image">
+        <h1>Shiven Patel</h1>
+        <p>Welcome to my portfolio!</p>
+    </section>
+
+    <!-- Other sections here -->
+
 </body>
 </html>
