--- a/experience.html
+++ b/experience.html
@@ -13,31 +13,28 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="experience.html">Experience</a></li>
+                <li><a href="experience.html">Professional Experience</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section id="experience">
-            <h2>Professional Experience</h2>
-            <div class="experience">
-                <img src="path_to_logo/MainlineSurgicalCenterLogo.png" alt="Mainline Surgical Center Logo" class="company-logo">
-                <h3>Web Development Intern</h3>
-                <p><strong>Company:</strong> Mainline Surgical Center</p>
-                <p><strong>Duration:</strong> Summer 2024</p>
-                <ul>
-                    <li>Developed and maintained user-friendly websites using HTML, CSS, JavaScript, and various web development frameworks.</li>
-                    <li>Created a Java program to automate the process of sending emails with attachments to over 100 recipients, improving communication efficiency.</li>
-                    <li>Collaborated with a team to enhance the functionality and user experience of an Electronic Health Record (EHR) system.</li>
-                    <li>Implemented responsive design techniques to ensure compatibility across different devices and browsers.</li>
-                    <li>Conducted thorough testing and debugging of web applications, ensuring high-quality deliverables.</li>
-                    <li>Worked closely with stakeholders to gather requirements and provide technical support and training.</li>
-                    <li>Contributed to the overall improvement of the company's digital presence and online patient services.</li>
-                </ul>
-            </div>
-        </section>
-    </main>
+
+    <section id="experience">
+        <h2>Professional Experience</h2>
+        <div class="experience">
+            <img src="images/mainline-surgical-logo.png" alt="Mainline Surgical Center Logo" class="company-logo">
+            <h3>Web Development Intern at Mainline Surgical Center</h3>
+            <p><strong>Summer 2024</strong></p>
+            <p>During my internship at Mainline Surgical Center, I had the opportunity to work on several impactful projects:</p>
+            <ul>
+                <li>Developed and maintained internal web applications, enhancing user interfaces and functionality to improve overall efficiency.</li>
+                <li>Created a Java program that automated email communications, streamlining administrative tasks and improving workflow.</li>
+                <li>Contributed to the development of an Electronic Health Record (EHR) system, which improved data management and user experience for medical staff.</li>
+                <li>Collaborated closely with cross-functional teams to integrate new features and systems, ensuring seamless operation and user satisfaction.</li>
+            </ul>
+        </div>
+    </section>
+
     <footer>
         <p>&copy; 2024 Shiven Patel. All rights reserved.</p>
     </footer>
