--- a/index.html
+++ b/index.html
@@ -10,22 +10,17 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#landing">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#experience">Professional Experience</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="experience.html">Professional Experience</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     
     <section id="landing">
-        <img src="background.jpg" alt="Welcome Image">
         <h1>Shiven Patel</h1>
-        <p>Welcome to my portfolio!</p>
+        <p>Welcome to my personal portfolio!</p>
     </section>
-
-    <!-- Other sections here -->
-
 </body>
 </html>
