--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     </header>
     
     <section id="landing">
-        <h1>Shiven Patel</h1>
-        <p>Welcome to my personal portfolio!</p>
+        <div class="landing-content">
+            <h1>Shiven Patel</h1>
+            <p>Welcome to my personal portfolio!</p>
+            <blockquote class="quote">"Innovation distinguishes between a leader and a follower." - Steve Jobs</blockquote>
+        </div>
     </section>
 </body>
 </html>
