--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional Experience - Shiven Patel</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
@@ -27,10 +27,26 @@
             <p><strong>Summer 2024</strong></p>
             <p>During my internship at Mainline Surgical Center, I had the opportunity to work on several impactful projects:</p>
             <ul>
-                <li>Developed and maintained internal web applications, enhancing user interfaces and functionality to improve overall efficiency.</li>
-                <li>Created a Java program that automated email communications, streamlining administrative tasks and improving workflow.</li>
-                <li>Contributed to the development of an Electronic Health Record (EHR) system, which improved data management and user experience for medical staff.</li>
-                <li>Collaborated closely with cross-functional teams to integrate new features and systems, ensuring seamless operation and user satisfaction.</li>
+                <li><strong>Developed and maintained internal web applications:</strong> Improved user interfaces and functionality to enhance overall efficiency.
+                    <ul>
+                        <li><a href="https://mainlinesurgical.com/" target="_blank">Mainline Surgical Center Website</a> (See the applications and features developed during my internship.)</li>
+                    </ul>
+                </li>
+                <li><strong>Created a Java program for automated email communications:</strong> Streamlined administrative tasks and improved workflow by automating the process of sending emails.
+                    <ul>
+                        <li><a href="https://github.com/Shiven14/java-email-automation" target="_blank">Java Email Automation Code on GitHub</a> (Link to the code repository.)</li>
+                    </ul>
+                </li>
+                <li><strong>Contributed to the development of an Electronic Health Record (EHR) system:</strong> Improved data management and user experience for medical staff.
+                    <ul>
+                        <li><a href="#">EHR System Overview</a> (Document or presentation outlining the project contributions. [Create and link this if not already available])</li>
+                    </ul>
+                </li>
+                <li><strong>Collaborated with cross-functional teams:</strong> Integrated new features and systems, ensuring seamless operation and user satisfaction.
+                    <ul>
+                        <li><a href="#">Collaborative Project Summary</a> (Document summarizing teamwork and integration efforts. [Create and link this if not already available])</li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </section>
@@ -40,3 +56,4 @@
     </footer>
 </body>
 </html>
+
