--- a/experience.html
+++ b/experience.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Experience - Shiven Patel</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Professional Experience | Shiven Patel Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -12,13 +12,11 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
                 <li><a href="experience.html">Professional Experience</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-
     <section id="experience">
         <h2>Professional Experience</h2>
         <div class="experience">
