--- a/experience.html
+++ b/experience.html
@@ -37,12 +37,12 @@
                 </li>
                 <li><strong>Contributed to the development of an Electronic Health Record (EHR) system:</strong> Improved data management and user experience for medical staff.
                     <ul>
-                        <li><a href="#">EHR System Overview</a> (Document or presentation outlining the project contributions. [Create and link this if not already available])</li>
+                        <li><a href="#">EHR System Overview</a> </li>
                     </ul>
                 </li>
                 <li><strong>Collaborated with cross-functional teams:</strong> Integrated new features and systems, ensuring seamless operation and user satisfaction.
                     <ul>
-                        <li><a href="#">Collaborative Project Summary</a> (Document summarizing teamwork and integration efforts. [Create and link this if not already available])</li>
+                        <li><a href="#">Collaborative Project Summary</a> </li>
                     </ul>
                 </li>
             </ul>
