--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
     <section id="experience">
         <h2>Professional Experience</h2>
         <div class="experience">
-            <img src="images/mainline-surgical-logo.jpg" alt="Mainline Surgical Center Logo" class="company-logo">
+            <img src="mainline-surgical-logo.jpg" alt="Mainline Surgical Center Logo" class="company-logo">
             <h3>Web Development Intern at Mainline Surgical Center</h3>
             <p><strong>Summer 2024</strong></p>
             <p>During my internship at Mainline Surgical Center, I had the opportunity to work on several impactful projects:</p>
