--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
             <div class="testimonials">
                 <h2>Testimonials</h2>
                 <blockquote>
-                    <p>"Shiven is a highly skilled developer with a keen eye for detail." - Colleague</p>
+                    <p>"Shiven is a highly skilled developer with a keen eye for detail." - Dr Sanjay Gupta</p>
                 </blockquote>
             </div>
         </div>
