--- a/experience.html
+++ b/experience.html
@@ -37,12 +37,12 @@
                 </li>
                 <li><strong>Contributed to the development of an Electronic Health Record (EHR) system:</strong> Improved data management and user experience for medical staff.
                     <ul>
-                        <li><a href="#">EHR System Overview</a> </li>
+                        <li><a href="EHR_System_Overview.pdf" target="_blank">EHR System Overview</a></li>
                     </ul>
                 </li>
                 <li><strong>Collaborated with cross-functional teams:</strong> Integrated new features and systems, ensuring seamless operation and user satisfaction.
                     <ul>
-                        <li><a href="#">Collaborative Project Summary</a> </li>
+                        <li><a href="Collaborative_Project_Summary.pdf" target="_blank">Collaborative Project Summary</a></li>
                     </ul>
                 </li>
             </ul>
@@ -54,4 +54,5 @@
     </footer>
 </body>
 </html>
+
 
