--- a/experience.html
+++ b/experience.html
@@ -42,7 +42,7 @@
                 </li>
                 <li><strong>Collaborated with cross-functional teams:</strong> Integrated new features and systems, ensuring seamless operation and user satisfaction.
                     <ul>
-                        <li><a href="Collaborative_Project_Summary.pdf" target="_blank">Collaborative Project Summary</a></li>
+                        <li><a href="Collaborative Project Summary.pdf" target="_blank">Collaborative Project Summary</a></li>
                     </ul>
                 </li>
             </ul>
