--- a/projects.html
+++ b/projects.html
@@ -24,28 +24,24 @@
         <div class="project">
             <h3>Verbo Vista</h3>
             <p>Verbo Vista is a comprehensive vocabulary learning application designed to enhance users' language skills through interactive quizzes and personalized learning paths. The app provides a dynamic and engaging platform for users to expand their vocabulary effectively.</p>
-            <ul>
-                <li><strong>Key Features:</strong></li>
-                <li>Interactive Quizzes: Users can participate in various quizzes to test and improve their vocabulary.</li>
-                <li>Personalized Learning Paths: Tailored learning experiences based on user progress and proficiency.</li>
-                <li>Progress Tracking: Visualize and track your learning journey with detailed progress reports.</li>
-                <li>User-Friendly Interface: Designed with an intuitive interface to make learning enjoyable and accessible.</li>
-                <li><a href="https://github.com/Shiven14/VerboVista" target="_blank">Verbo Vista GitHub Repository</a></li>
-            </ul>
+            <div><strong>Key Features:</strong></div>
+            <div>Interactive Quizzes: Users can participate in various quizzes to test and improve their vocabulary.</div>
+            <div>Personalized Learning Paths: Tailored learning experiences based on user progress and proficiency.</div>
+            <div>Progress Tracking: Visualize and track your learning journey with detailed progress reports.</div>
+            <div>User-Friendly Interface: Designed with an intuitive interface to make learning enjoyable and accessible.</div>
+            <div><a href="https://github.com/Shiven14/VerboVista" target="_blank">Verbo Vista GitHub Repository</a></div>
         </div>
 
         <div class="project">
             <h3>Real-Time Data Visualization Dashboard</h3>
             <p>Developed a full-stack web application designed for real-time data visualization and interactive user engagement. The application features a React frontend and an Express/Node.js backend, leveraging WebSocket technology to provide live data updates.</p>
-            <ul>
-                <li><strong>Key Features:</strong></li>
-                <li>Real-Time Data Updates: Implemented WebSocket communication between the server and client to push live data updates every 5 seconds, ensuring users receive the most current information.</li>
-                <li>Interactive Visualization: Integrated D3.js for dynamic and interactive visualizations, allowing users to explore and interact with data in real-time.</li>
-                <li>User Authentication: Implemented secure user authentication and session management using JWT (JSON Web Tokens) to protect user data and access.</li>
-                <li>Responsive Design: Designed a responsive user interface using React and CSS, ensuring usability across various devices and screen sizes.</li>
-                <li>Deployment: Deployed the application using Heroku and AWS, providing scalable and reliable access to users globally.</li>
-                <li><a href="https://github.com/Shiven14/Real-Time-Data-Visualization-Dashboard-" target="_blank">Real-Time Data Visualization Dashboard GitHub Repository</a></li>
-            </ul>
+            <div><strong>Key Features:</strong></div>
+            <div>Real-Time Data Updates: Implemented WebSocket communication between the server and client to push live data updates every 5 seconds, ensuring users receive the most current information.</div>
+            <div>Interactive Visualization: Integrated D3.js for dynamic and interactive visualizations, allowing users to explore and interact with data in real-time.</div>
+            <div>User Authentication: Implemented secure user authentication and session management using JWT (JSON Web Tokens) to protect user data and access.</div>
+            <div>Responsive Design: Designed a responsive user interface using React and CSS, ensuring usability across various devices and screen sizes.</div>
+            <div>Deployment: Deployed the application using Heroku and AWS, providing scalable and reliable access to users globally.</div>
+            <div><a href="https://github.com/Shiven14/Real-Time-Data-Visualization-Dashboard-" target="_blank">Real-Time Data Visualization Dashboard GitHub Repository</a></div>
         </div>
         
     </section>
@@ -55,3 +51,4 @@
     </footer>
 </body>
 </html>
+
