--- a/index.html
+++ b/index.html
@@ -25,5 +25,10 @@
             <blockquote class="quote">"Innovation distinguishes between a leader and a follower." - Steve Jobs</blockquote>
         </div>
     </section>
+
+    <footer>
+        <p>© 2024 Shiven Patel. All rights reserved.</p>
+    </footer>
 </body>
 </html>
+
