--- a/experience.html
+++ b/experience.html
@@ -28,6 +28,7 @@
             <div><strong>Developed and maintained internal web applications:</strong> Improved user interfaces and functionality to enhance overall efficiency.</div>
             <div>
                 <a href="https://mainlinesurgical.com/" target="_blank">Mainline Surgical Center Website</a> 
+                and
                 <a href="https://drcircle.com/" target="_blank">DrCircle Website</a> 
                 (See the applications and features developed during my internship.)
             </div>
