--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <div class="logo">
+                <a href="index.html">Shiven Patel</a>
+            </div>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="nav-links">
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="experience.html">Professional Experience</a></li>
@@ -23,12 +31,15 @@
             <h1>Shiven Patel</h1>
             <p>Welcome to my personal portfolio!</p>
             <blockquote class="quote">"Innovation distinguishes between a leader and a follower." - Steve Jobs</blockquote>
+            <a href="projects.html" class="cta-button">View My Work</a>
         </div>
     </section>
 
     <footer>
         <p>© 2024 Shiven Patel. All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
 
