--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shiven Patel Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -37,6 +38,11 @@
 
     <footer>
         <p>© 2024 Shiven Patel. All rights reserved.</p>
+        <div class="socials">
+            <a href="https://linkedin.com/in/shivenpatel" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/shivenpatel" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="mailto:shiven.patel@example.com"><i class="fas fa-envelope"></i></a>
+        </div>
     </footer>
 
     <script src="script.js"></script>
