--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>Shiven Patel Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
+    
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="loader"></div>
+    </div>
 
-    <!-- Scroll Progress Bar -->
-    <div id="progress-bar"></div>
-
+    <!-- Header Navigation -->
     <header>
         <nav>
             <div class="logo">
@@ -20,80 +24,76 @@
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#experience">Experience</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
+    <!-- Hero Section -->
     <section id="home">
-        <div class="landing-content">
+        <div class="hero-content">
             <h1>Shiven Patel</h1>
-            <p>Welcome to my personal portfolio!</p>
-            <blockquote class="quote">"Innovation distinguishes between a leader and a follower." - Steve Jobs</blockquote>
-            <a href="#projects" class="cta-button">View My Work</a>
+            <p>Innovative Designer & Developer</p>
+            <a href="#portfolio" class="cta-button">View My Work</a>
         </div>
     </section>
 
+    <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <div class="profile">
+        <div class="about-content">
             <img src="IMG_4210.JPG" alt="Shiven Patel" class="profile-img">
-            <p>I am a senior CS major with a passion for software development. I have experience as a web development intern, where I created websites and developed Java programs. I also worked on an EHR system for a surgical clinic. My goal is to secure a job in the software field.</p>
+            <p>I am a senior CS major passionate about software development, with experience in web design and application development.</p>
         </div>
     </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="projects-container">
-            <div class="project">
+    <!-- Portfolio Section -->
+    <section id="portfolio">
+        <h2>My Work</h2>
+        <div class="portfolio-gallery">
+            <div class="portfolio-item">
+                <img src="images/project1.jpg" alt="Project 1">
                 <h3>Verbo Vista</h3>
-                <p>A vocabulary learning app with interactive quizzes and personalized learning paths.</p>
-                <a href="https://github.com/Shiven14/VerboVista" target="_blank">GitHub Repository</a>
             </div>
-            <div class="project">
-                <h3>Real-Time Data Visualization Dashboard</h3>
-                <p>A full-stack web app with real-time data updates and interactive visualizations.</p>
-                <a href="https://github.com/Shiven14/Real-Time-Data-Visualization-Dashboard-" target="_blank">GitHub Repository</a>
+            <div class="portfolio-item">
+                <img src="images/project2.jpg" alt="Project 2">
+                <h3>Data Visualization Dashboard</h3>
             </div>
         </div>
     </section>
 
-    <section id="experience">
-        <h2>Professional Experience</h2>
-        <div class="experience-container">
-            <div class="experience">
-                <h3>Web Development Intern - Mainline Surgical Center</h3>
-                <p><strong>Summer 2024</strong></p>
-                <ul>
-                    <li>Developed and maintained internal web applications.</li>
-                    <li>Created a Java program for automated email communications.</li>
-                    <li>Contributed to an Electronic Health Record (EHR) system.</li>
-                </ul>
+    <!-- Services Section -->
+    <section id="services">
+        <h2>My Services</h2>
+        <div class="services-container">
+            <div class="service">
+                <i class="fas fa-code"></i>
+                <h3>Web Development</h3>
+            </div>
+            <div class="service">
+                <i class="fas fa-paint-brush"></i>
+                <h3>UI/UX Design</h3>
             </div>
         </div>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact">
-        <h2>Contact</h2>
+        <h2>Contact Me</h2>
         <form action="https://formspree.io/f/myzgdlll" method="POST" class="contact-form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="Your Name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Your Email" required>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
         </form>
     </section>
 
     <footer>
-        <p>© 2025 Shiven Patel. All rights reserved.</p>
+        <p>&copy; 2025 Shiven Patel. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
-
 </body>
 </html>
-
